Updated CivicXpress logos to set manual pixel width/height and retain aspect of original graphic. Pushing pages-config.json because apparently the old MC/SF/PUD pages that I deleted earlier were not retained? Files modified - [pages-config.json,header.html,Login.html,ForgotPassword.html,ResetPassword.html]

--- a/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
+++ b/src/main/webapp/pages/ForgotPassword/ForgotPassword.html
@@ -5,7 +5,7 @@
                 <wm-gridrow name="gridrow1" padding="2em unset">
                     <wm-gridcolumn columnwidth="3" name="gridcolumn1"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn2" horizontalalign="center">
-                        <wm-picture name="pictureLogo" picturesource="resources/images/imagelists/CX-Logo.png" width="100pt" height="100pt"></wm-picture>
+                        <wm-picture name="pictureLogo" picturesource="resources/images/imagelists/CX-Logo.png" width="200px" height="102px"></wm-picture>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="3" name="gridcolumn5"></wm-gridcolumn>
                 </wm-gridrow>
