--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -8,7 +8,7 @@
                     </wm-gridrow>
                     <wm-gridrow name="gridrow6_1" class="logobg">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn10_1" horizontalalign="center" class="col-xs-12" padding="unset unset 2em unset">
-                            <wm-picture name="picture1" picturesource="resources/images/imagelists/CX-Logo.png" height="6em"></wm-picture>
+                            <wm-picture name="picture1" picturesource="resources/images/imagelists/CX-Logo.png" height="102px" width="200px"></wm-picture>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="loginGridRow">
