--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -61,7 +61,7 @@
                                 <wm-gridrow name="gridrow11">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn21_1"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn22" horizontalalign="center">
-                                        <wm-button class="btn-default btn-primary" caption="Update Status" type="button" margin="unset 0.5em" name="buttonUpdateStatus" on-click="Variables.UpdateFormStatusInMasterForms.invoke()" iconclass="wi wi-update"></wm-button>
+                                        <wm-button class="btn-primary" caption="Update Status" type="button" margin="unset 0.5em" name="buttonUpdateStatus" on-click="Variables.UpdateFormStatusInMasterForms.invoke()" iconclass="wi wi-update"></wm-button>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn23"></wm-gridcolumn>
                                 </wm-gridrow>
@@ -87,6 +87,16 @@
                                         <wm-label padding="unset 0.5em" name="label7" class="h1" caption="bind:Variables.lvFormType.dataSet.data[$i].formType"></wm-label>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn15"></wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow44">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn104">
+                                        <wm-composite name="composite4" show="bind:!!Variables.CurrentForm.dataSet.data[$i].formTitle &amp;&amp; Variables.CurrentForm.dataSet.data[$i].formTitle != '' &amp;&amp; Variables.CurrentForm.dataSet.data[$i].formTitle != 'open'">
+                                            <wm-label class="col-md-3 control-label" name="label25" caption="Form Title"></wm-label>
+                                            <wm-container class="col-md-9" name="container4">
+                                                <wm-text name="textFormTitle" readonly="true" disabled="true" show="true" placeholder="" datavalue="bind:Variables.CurrentForm.dataSet.data[$i].formTitle"></wm-text>
+                                            </wm-container>
+                                        </wm-composite>
+                                    </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow ng-repeat="formField in Variables.svFormTypeFields.dataSet.content" name="fieldGridrow{{$index}}">
                                     <wm-gridcolumn columnwidth="12" name="fieldGridcolumn{{$index}}">
@@ -117,7 +127,7 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="formSaveControlRow">
                                     <wm-gridcolumn columnwidth="12" name="formSaveControlColumn" horizontalalign="right">
-                                        <wm-button class="btn-primary" caption="Save" type="button" margin="1% 3% 1% unset" name="btnSaveFormData" iconclass="wi wi-save" on-click="Variables.svSaveFormData.invoke()"></wm-button>
+                                        <wm-button class="btn-primary" caption="Save" type="button" margin="1% 3% 1% unset" name="btnSaveFormData" iconclass="wi wi-save" on-click="Variables.svSaveFormData.invoke()" show="bind:currentProgress === 0"></wm-button>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
