--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -473,7 +473,7 @@
                 </wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions3">
-                <wm-button class="btn-primary" caption="OK" on-click="closeDialog()" name="button10" iconclass="wi wi-check"></wm-button>
+                <wm-button class="btn-primary" caption="OK" on-click="closeDialog();Variables.goToPage_UserOpenForms.invoke()" name="button10" iconclass="wi wi-check"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
     </wm-view>
