GIS Mainenance- Select Municipalities is blank Files modified - [MyMunicipality.js,pages-config.json,ManageGISData.variables.json,MunicipalityAdministration.js,ManageGISData.js,servicedef.xml,MunicipalityAdministration.html,MyMunicipality.html]

--- a/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
+++ b/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
@@ -115,7 +115,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow10">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn21" padding="2em unset" horizontalalign="center">
-                        <wm-tile width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageGISData.invoke()" name="tile7">
+                        <wm-tile width="240px" height="160px" class="bg-primary" on-click="tile7Click($event, $scope)" name="tile7">
                             <wm-layoutgrid height="100%" name="layoutgrid8">
                                 <wm-gridrow height="100%" name="gridrow11">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" class="col-xs-3" name="gridcolumn24">
