--- a/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
+++ b/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
@@ -51,7 +51,7 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn17" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="GISRecordsTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageGISData.invoke()">
+                        <wm-tile name="GISRecordsTile" width="240px" height="160px" class="bg-primary" on-click="GISRecordsTileClick($event, $scope)">
                             <wm-layoutgrid height="100%" name="layoutgrid2">
                                 <wm-gridrow height="100%" name="gridrow10">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn23" class="col-xs-3">
