--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -22,7 +22,7 @@
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="4" name="gridcolumn7">
                                             <wm-form-field name="subdivisions" displayname="Subdivision" show="true" primary-key="false" generator="assigned" key="subdivisions" type="list" is-related="true" required="required" widget="select" placeholder="Select value"
-                                            displayexpression="subdivision" orderby="subdivision:asc" disabled="false"></wm-form-field>
+                                            displayexpression="subdivision" orderby="subdivision:asc" disabled="false" dataset="bind:Variables.CurrentMunicipalitySubdivisions.dataSet" datafield="All Fields" displayfield="subdivision"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="4" name="gridcolumn8">
                                             <wm-form-field name="lot" displayname="Lot" show="true" primary-key="false" generator="assigned" key="lot" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" disabled="false"></wm-form-field>
